# picoadk-firmware-ng

./: .clang_format  .gitignore  .gitmodules  CMakeLists.txt  README.md  project_config.cmake
.githooks/: pre-commit
.github/workflows/: build.yml
cmake/: freertos_import.cmake  git_vars.cmake
core/include/: FreeRTOSConfig.h  dsp_helper.h  get_serial.h  sysinit.h
core/ld/: rp2350_psram.ld.in
core/lib/audio/: CMakeLists.txt
core/lib/audio/include/: audio_subsystem.h
core/lib/audio/src/: audio.cpp  audio_subsystem.c  audio_subsystem.cpp
core/src/: psram.cpp  sysinit.c
include/: audio_dsp.h  core.h
src/: audio_dsp.cpp  main.c  main.cpp
